Added a base::Feature command line flag for specifying AEC noise transparency

This CL adds a command line switch based on base::Feature to allow the
user to turn on the experimental WebRTC AEC feature for providing
increased transparency to stationary render noise.

Bug: chromium:836925
Change-Id: I941b3a26b5b4c657df37ceba69af6b548182713d
Reviewed-on: https://chromium-review.googlesource.com/1027817
Reviewed-by: Nick Carter <nick@chromium.org>
Commit-Queue: Per Åhgren <peah@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554449}
Former-commit-id: d4de1fd335d4947601aff670fdad3b5bbc1f1319