content/renderer/media/stream/media_stream_audio_processor.cc
@@ -629,6 +629,8 @@ void MediaStreamAudioProcessor::InitializeAudioProcessingModule(
         base::FeatureList::IsEnabled(features::kWebRtcAecBoundedErlSetup);
     aec3_config.echo_removal_control.has_clock_drift =
         base::FeatureList::IsEnabled(features::kWebRtcAecClockDriftSetup);
+    aec3_config.echo_audibility.use_stationary_properties =
+        base::FeatureList::IsEnabled(features::kWebRtcAecNoiseTransparency);
 
     ap_builder.SetEchoControlFactory(
         std::unique_ptr<webrtc::EchoControlFactory>(
